--- a/wiki/DevelopersGuideForDebugging.wiki
+++ b/wiki/DevelopersGuideForDebugging.wiki
@@ -111,9 +111,11 @@ This value will help to debug the code and output a lot more information that is
   * If we have successfully completed the above steps, we can start Firefox and make a simple test creating 2 TabGroupsManager groups.
 Settings debug parameters in Firefox will break Firebug, but dont worry, we wont need it for debugging our javascript.
 
-  * To debug TabGroupsManager the best option is to use *VenkMan Javascript Debugger*. _"Although at first glance it might seem that Venkman cannot debug extensions, doing so is in fact fully supported; it's just disabled by default. To debug your extension with Venkman (XUL files and their attached JS files), you'll have to load browser and extension files into Venkman by unchecking the option in the toolbar: Debug > Exclude Browser Files."_ Now close all Firefoxs and Venkman. Reopen them again and begging setting breakpoints.
+  * To debug TabGroupsManager the best option is to use *VenkMan Javascript Debugger*. Please download and install the extension and restart Firefox: https://addons.mozilla.org/en-US/firefox/addon/javascript-debugger
+  * Configuring VenkMan: Add the Menu Bar to Firefox. Now open VenkMan: Tools, Javascript Debugger. In VenkMan, uncheck the option in the toolbar: Debug > Exclude Browser Files."_ Now close all Firefoxs and Venkman. Reopen them again and begging setting breakpoints. 
+  * Remember that you can Import breakpoints in Venkman. We have already set some breakpoints and saved them to a file to try to fix some issues, import them if you want. Check the debug version folder for breakpoints for each issue: _\tabgroupsmanager\branches\debug_branch\breakpoints_venkman_
     * https://developer.mozilla.org/en-US/docs/Extension_Frequently_Asked_Questions
-    * https://addons.mozilla.org/en-US/firefox/addon/javascript-debugger
+
 
   * At the left you will see the list of files and scripts (.xml, .jsm, .js...), variables and breakpoints.  (.xml, .jsm, .js...). Select TabGroupsManager.js file and set a breakpoint in the code by double clicking in the left blank space, near the the line number. For testing, set it in the line 5814:
     * `Breakpoint -- var sfunc = arguments.callee.caller.toString(); //works`
