--- a/wiki/DevelopersGuideForDebugging.wiki
+++ b/wiki/DevelopersGuideForDebugging.wiki
@@ -104,26 +104,24 @@ Go to the svn folder we have downloaded before and copy all the files inside deb
 
   * Its recommended to debug the source code of TabGroupsManager using the *Debug branch*. You can perfectly use and debug the non debug branch of TabGroupsManager. Please refer to point (2.), (3.) and (4.) in order to download and install the debug branch of TabGroupsManager.
 
-  * *TabGroupsManager debug version*, has a default value already set to true in order to debug the code and get more warning and error messages. 
-This value will help to debug the code and output a lot more information that is not available in the normal non debug version.
-`\defaults\preferences\tabgroupsmanager.js -- pref("extensions.tabgroupsmanager.debug",true);`
+  * *TabGroupsManager debug version*, has a default value already set to true in order to debug the code and get more warning and error messages. This value will help to debug the code and output a lot more information that is not available in the normal non debug version.
+    * `\defaults\preferences\tabgroupsmanager.js -- pref("extensions.tabgroupsmanager.debug",true);`
 
   * If we have successfully completed the above steps, we can start Firefox and make a simple test creating 2 TabGroupsManager groups.
-Settings debug parameters in Firefox will break Firebug, but dont worry, we wont need it for debugging our javascript.
 
   * To debug TabGroupsManager the best option is to use *VenkMan Javascript Debugger*. Please download and install the extension and restart Firefox: https://addons.mozilla.org/en-US/firefox/addon/javascript-debugger
 
-  * Configuring VenkMan: Add the Menu Bar to Firefox. Now open VenkMan: Tools, Javascript Debugger. In VenkMan, uncheck the option in the toolbar: Debug > Exclude Browser Files." Now close all Firefoxs and Venkman. Reopen them again and begging setting breakpoints. 
+  * Configuring VenkMan: Add the Menu Bar to Firefox. Now open VenkMan: _Tools, Javascript Debugger_. In VenkMan, uncheck the option in the toolbar: Debug > Exclude Browser Files." Now close all Firefoxs and Venkman. Reopen them again and begging setting breakpoints. 
 
   * Remember that you can Import breakpoints in Venkman. We have already set some breakpoints and saved them to a file to try to fix some issues, import them if you want. Check the debug version folder for those breakpoints saved for each issue: _\tabgroupsmanager\branches\debug_branch\breakpoints_venkman_
     * https://developer.mozilla.org/en-US/docs/Extension_Frequently_Asked_Questions
-
 
   * At the left you will see the list of files and scripts (.xml, .jsm, .js...), variables and breakpoints.  (.xml, .jsm, .js...). Select TabGroupsManager.js file and set a breakpoint in the code by double clicking in the left blank space, near the the line number. For testing, set it in the line 5814:
     * `Breakpoint -- var sfunc = arguments.callee.caller.toString(); //works`
   * Now Firefox will stop in that breakpoint and you will be able to debug the code and variable values with F5(Run), F12(Go Next Line) and F11(Go Inside).
 
   * Things to know:
+    # Remember to export save your breakpoints, so you dont loose your work!!
     # You need to set all developer parameters in Firefox to debug scripts. Also you need to uncheck: Debug > Exclude Browser Files in VenkMan.
     # TabGroupsManager will save a log file with the callstack in c:\tabsgm.txt. Delete that file when you need. Change the log if you are under Linux or it will not work.
     # Adding the following code in a line will stop the execution, like if we set a breakpoint in that line:
@@ -133,6 +131,7 @@ Settings debug parameters in Firefox will break Firebug, but dont worry, we wont
         * `console.log("variable %o", variable);`
         * `Firefox.console.log(); //test` with this option if the above doesnt work.
     # Dont forget to remove or comment those lines with debugger or console.log when adding the new code to the main /trunk stable version. Its only for debugging purposes and should never be in the final release.
+    # Settings debug parameters in Firefox will break Firebug, but dont worry, we wont need it for debugging our javascript extension.
 <br />
 
 *7. Other Firefox Javascript Debuggers for Extensions*
