--- a/wiki/DevelopersGuideForDebugging.wiki
+++ b/wiki/DevelopersGuideForDebugging.wiki
@@ -103,7 +103,7 @@ http://code.google.com/p/tabgroupsmanager/source/browse/
   * Now that we have overwritten all TabGroupsManager files with the debug version, we can start editing the code having in mind the following information. 
 
   * The following .jar file: `{ca111111-9e0a-4756-9077-19d6f3e64ea8}\chrome\tabgroupsmanager.jar` is another compressed file, and has been uncompressed in the same folder, generating the following folders:
-`content`, `local`, `skin`
+    * `{ca526f8b-9e0a-4756-9077-19d6f3e64ea8}\chrome\content`, `{ca526f8b-9e0a-4756-9077-19d6f3e64ea8}\chrome\local`, `{ca526f8b-9e0a-4756-9077-19d6f3e64ea8}\chrome\skin`
 
   * *Firefox will not read those subfolders for new changes, it will only read the file tabgroupsmanager.jar, that means each time we change any file inside those folders, we must copy/drag and drop those files again inside \chrome\tabgroupsmanager.jar file with WinRar and reload Firefox or even restart Firefox. Since _chrome\tabgroupsmanager.jar_ can be sometimes locked by Firefox, I would recommend to close Firefox, open _chrome\tabgroupsmanager.jar_ with Winrar, drag and drop the changed files in the right folders and reopen Firefox.*
 
