--- a/wiki/StartingGuideForMembers.wiki
+++ b/wiki/StartingGuideForMembers.wiki
@@ -11,7 +11,7 @@
 
 *TabGroupsManager IRC for members:*
 
-Main channel focused in discussing development of TGM.
+Main channel focused in discussing development of TGM. Team members should register their nick to NickServ and we will set privileges for the channel.
   * irc.mozilla.org
   * port: 6667
   * /join #tabgroupsmanager
@@ -20,3 +20,8 @@ Main channel focused in discussing development of TGM.
 
   * /join #extdev
   * /join #introduction
+
+*Commiting code changes:*
+
+  * Before commiting code changes, make sure you have fully read and understand the wiki "Developers Guide for Debugging". Make sure no log, debug switchs, console.logs or debugger; code has been left in the code you are submitting.
+  * Read step 2 of "Developers Guide for Debugging" in order to know how to access the svn with your name and generated password.
