Edited wiki page StartingGuideForMembers through web user interface.

--- a/wiki/StartingGuideForMembers.wiki
+++ b/wiki/StartingGuideForMembers.wiki
@@ -1,4 +1,4 @@
-#summary Starting Guide for Members
+#summary About the team and improving TGM: A Starting Guide
 #labels Phase-Requirements
 *Introduction*
 
